# gijitaiken_webots

./: .gitignore  CMakeLists.txt  package.xml  setup.cfg  setup.py
config/: camera_config.json  color_config.json  joint_directions.json
gijitaiken_webots/: imu_main.py  logic_main.py
gijitaiken_webots/driver/: device_manager.py
gijitaiken_webots/driver/controller/: robot_controller.py
gijitaiken_webots/node/: imu_node.py  logic_node.py
gijitaiken_webots/node/process/: fall_detection.py  middleware.py
gijitaiken_webots/utils/: config_loader.py  kinematics.py
include/gijitaiken_webots/node/: vision_node.hpp
include/gijitaiken_webots/process/: image_process.hpp
launch/: robot_launch.py
protos/hiro_textures/: 2nd_floor.part  almi2_view_13__14__arm.part  almi2_view_6_7__arm_bracket.part  almi2_view_6_7__arm_bracket_2_collision.stl  almi2_view_6_7__arm_bracket_2_visual.stl  almi2_view_6_7__arm_bracket_collision.stl  almi2_view_6_7__arm_bracket_visual.stl  almi_2mm_connector_mx64.part  almi_2mm_connector_mx64_1.part  almi_2mm_connector_mx64_mir.part  almi_2mm_connector_mx64_mir_1.part  almi_2mm_floor_2nd__1.part  almi_2mm_floor_2nd__1.stl  almi_2mm_fr05_f101k_set.part  almi_2mm_fr05_f101k_set_1.part  almi_2mm_fr05_f101k_set_mir.part  almi_2mm_fr05_f101k_set_mir_1.part  almi_2mm_lower_leg.part  almi_2mm_lower_leg_mir.part  almi_4_5mm_connector_lower_arm_kidsize.part  almi_4mm_neck_bracket.part  almi_5mm_bracket_servo_1_2.part  almi_5mm_bracket_servo_1_2_left.part  almi_6_5mm_l_mx64.part  almi_6_5mm_l_mx64_mir.part  back_bumper.part  battery_holder.part  bracket_1_2_lower.part  bracket_1_2_lower.stl  bracket_1_2_lower_left.part  bracket_back_bumper.part  bracket_back_bumper_mir.part  bumper_front_lower.part  bumper_front_lower.stl  bumper_front_lower_mir.part  camera_frame.part  camera_logitech_c920_offset_2mm.part  carbon_2mm_arm_kidsize_1.part  carbon_2mm_arm_kidsize_2.part  carbon_2mm_neck_side_plate.part  (+101 more)
resource/: hiro.urdf
src/: MUJOCO_LOG.TXT
src/aruku_mujoco/: CMakeLists.txt  README.md  package.xml
src/aruku_mujoco/config/: kinematic.json
src/aruku_mujoco/model/: robot.xml
src/aruku_mujoco/src/: main.cpp  simulator.cpp  simulator.hpp
src/aruku_mujoco/src/aruku_mini/: aruku_mujoco_node.cpp  aruku_mujoco_node.hpp  kinematic.cpp  kinematic.hpp  walking_manager.cpp  walking_manager.hpp
src/aruku_mujoco/src/keisan/: constant.cpp
src/aruku_mujoco/src/tachimawari_mini/: control_manager.hpp  mujoco_control_manager.cpp  mujoco_control_manager.hpp
src/aruku_node/: CMakeLists.txt  package.xml
src/aruku_node/config/: kinematic.json
src/aruku_node/include/aruku_node/: aruku_node.hpp
src/aruku_node/src/: aruku_node.cpp  main.cpp
src/aruku_node/src/aruku_mini/: kinematic.cpp  kinematic.hpp  walking_manager.cpp  walking_manager.hpp
src/aruku_node/src/jitsuyo/: config.hpp
src/aruku_node/src/keisan/: angle.cpp  angle.hpp  euler.hpp  euler.impl.hpp  interpolation.hpp  matrix.cpp  matrix.hpp  matrix.impl.hpp  number.hpp  point_3.cpp  point_3.hpp  vector.hpp  vector.impl.hpp
src/aruku_node/src/tachimawari_mini/: joint.hpp  joint_id.cpp  joint_id.hpp
src/gijitaiken/: .gitignore  README.md  package.xml  setup.cfg  setup.py
src/gijitaiken/config/: joint_map.yaml
src/gijitaiken/gijitaiken/: gijitaiken_node.py  simulation.py  teleop_node.py
src/gijitaiken/model/: robot.xml  scene.xml
src/gijitaiken/model/assets/: 2nd_floor.stl  almi2_view_13__14__arm.part  almi2_view_6_7__arm_bracket.part  almi2_view_6_7__arm_bracket.stl  almi_2mm_connector_mx64.part  almi_2mm_connector_mx64_1.part  almi_2mm_connector_mx64_mir.part  almi_2mm_connector_mx64_mir_1.part  almi_2mm_floor_2nd__1.part  almi_2mm_fr05_f101k_set_mir.part  almi_2mm_fr05_f101k_set_mir.stl  almi_2mm_fr05_f101k_set_mir_1.part  almi_2mm_lower_leg.stl  almi_5mm_bracket_servo_1_2.part  almi_5mm_bracket_servo_1_2.stl  almi_5mm_bracket_servo_1_2_left.part  almi_5mm_bracket_servo_1_2_left.stl  almi_6_5mm_l_mx64_mir.stl  back_bumper.part  battery_holder.stl  bracket_1_2_lower.part  bracket_1_2_lower_left.part  bracket_back_bumper.stl  bracket_back_bumper_mir.part  bumper_front_lower_mir.part  camera_frame.part  carbon_2mm_arm_kidsize_1.part  fr05_f101k_set_mir.part  front_pillar.part  front_upper_bumper.part  handle.part  handle.stl  handle_bracket_kidsize.part  handle_bracket_kidsize.stl  handler_holder_siber.part  hn05_i101_1.part  hn05_i101_2.part  hn05_i101_mir_1.stl  hn05_i101_mir_2.part  holder_lower_bracket.part  (+34 more)
src/gijitaiken/model/assets/merged/: almi2_view_6_7__arm_bracket_visual.stl  foot_left_2_visual.stl  foot_right_1_visual.stl  foot_right_2_visual.stl  foot_right_3_visual.stl  foot_right_4_visual.stl  head_visual.stl  left_lowerhand_visual.stl  left_upperhand_visual.stl  neck_visual.stl  right_upperhand_visual.stl  torso_kidsize25_visual.stl
src/gijitaiken_webots/: vision_main.cpp
src/gijitaiken_webots/node/: vision_node.cpp
src/gijitaiken_webots/process/: image_process.cpp
src/mujoco_node/: package.xml  setup.py
src/mujoco_node/config/: kinematic.json
src/mujoco_node/launch/: autotune.launch.py
src/mujoco_node/model/: robot.xml  scene.xml
src/mujoco_node/model/assets/: 2nd_floor.part  almi2_view_13__14__arm.stl  almi_2mm_connector_mx64.stl  almi_2mm_connector_mx64_mir.stl  almi_2mm_fr05_f101k_set.part  almi_2mm_fr05_f101k_set_1.part  almi_2mm_fr05_f101k_set_1.stl  almi_2mm_lower_leg.part  almi_2mm_lower_leg_mir.part  almi_2mm_lower_leg_mir.stl  almi_4_5mm_connector_lower_arm_kidsize.part  almi_4_5mm_connector_lower_arm_kidsize.stl  almi_4mm_neck_bracket.part  almi_4mm_neck_bracket.stl  almi_6_5mm_l_mx64.part  almi_6_5mm_l_mx64.stl  almi_6_5mm_l_mx64_mir.part  back_bumper.stl  battery_holder.part  bracket_1_2_lower_left.stl  bracket_back_bumper.part  bracket_back_bumper_mir.stl  bumper_front_lower.part  bumper_front_lower_mir.stl  camera_frame.stl  camera_logitech_c920_offset_2mm.part  camera_logitech_c920_offset_2mm.stl  carbon_2mm_arm_kidsize_1.stl  carbon_2mm_arm_kidsize_2.part  (+55 more)
src/mujoco_node/mujoco_node/: simulator.py
worlds/: Hiro.wbt  soccer_field.wbt
(+8 files in other folders)
