<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gijitaiken_webots</name>
  <version>0.0.0</version>
  <description>Soccer Simulation Using Webots</description>
  <maintainer email="faeyzarahnaf07@gmail.com">user</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>ament_cmake_python</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  
  <depend>opencv</depend>
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>webots_ros2_driver</exec_depend>

  <depend>tachimawari_interfaces</depend>
  <depend>kansei_interfaces</depend>
  <depend>ninshiki_interfaces</depend>
  <depend>shisen_interfaces</depend>
  <depend>gyakuenki_interfaces</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>