<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>gijitaiken</name>
  <version>0.0.1</version>
  <description>Ichiro Simulator with MuJoCo</description>
  <maintainer email="faeyzarahnaf07@gmail.com">musyaree</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <depend>rclpy</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>ament_index_python</depend>
  
  <depend>tachimawari_interfaces</depend>
  <depend>aruku_interfaces</depend>
  <depend>akushon_interfaces</depend>
  <depend>kansei_interfaces</depend>

  <exec_depend>mujoco</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>pyyaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>